--- a/ACTIVITAT 3 - M09 - HTML  CSS/index.html
+++ b/ACTIVITAT 3 - M09 - HTML  CSS/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant el coberts</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="imatgesnoves/icons8-tenedor-48.png">
 </head>
 <body>
     <header>
@@ -27,12 +28,21 @@
             <h1>Sobre nosaltres</h1>
             <div class="sobrenos">
                 <div class="contenido">
-                    <img src="imatges/kebab-simo.jpg" alt="imagen 2">
+                    <img src="imatgesnoves/imagen2.jpg" alt="imagen 2">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam deleniti aliquid inventore reprehenderit asperiores nemo eveniet, dolor fugiat molestias consequuntur eaque mollitia reiciendis magnam. Assumenda mollitia qui nesciunt aliquam nobis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam deleniti aliquid inventore reprehenderit asperiores nemo eveniet, dolor fugiat molestias consequuntur eaque mollitia reiciendis magnam. Assumenda mollitia qui nesciunt aliquam nobis?</p>
                 </div>
                 <div class="contenido">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo et rem corrupti laborum illum quis ipsa autem nesciunt labore sequi quasi maiores inventore, ratione animi quos. Blanditiis laboriosam ducimus harum!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam deleniti aliquid inventore reprehenderit asperiores nemo eveniet, dolor fugiat molestias consequuntur eaque mollitia reiciendis magnam. Assumenda mollitia qui nesciunt aliquam nobis?</p>
-                    <img src="imatges/localdentro.jpg" alt="imagen 3">
+                    <picture>
+                        <!-- Versió per a pantalla gran -->
+                        <source media="(min-width: 1200px)" srcset="imatgesnoves/imagen1.jpg">
+                        <!-- Versió per a pantalla de 768px -->
+                        <source media="(min-width: 768px)" srcset="imatgesnoves/imagen1_768px.jpg">
+                        <!-- Versió per a pantalla de 576px -->
+                        <source media="(min-width: 576px)" srcset="imatgesnoves/imagen1_576px.jpg">
+                        <img src="imatgesnoves/imagen3.jpg" alt="imagen 3">
+                    </picture>
+                    
                 </div>
             </div>
         </section>
@@ -48,10 +58,9 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis odit explicabo ipsum asperiores facere temporibus! Eveniet inventore aliquid quod culpa, ipsam unde harum, aspernatur recusandae similique, sint eos repellendus accusantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam deleniti aliquid inventore reprehenderit asperiores nemo eveniet, dolor fugiat molestias consequuntur eaque mollitia reiciendis magnam. Assumenda mollitia qui nesciunt aliquam nobis?</p>
                     </div>
                     <div class="imagenes">
-                        <img src="imatges/shawarma.jpg" alt="Shawarma">
+                        <img src="imatgesnoves/imagen4.jpg" alt="Shawarma">
 
-                        <img src="imatges/kebab.jpg" alt="Kebab">
-                        
+                        <img src="imatgesnoves/imagen6.jpg" alt="Kebab">
                     </div>
                 </div>
             </div>
@@ -64,8 +73,8 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis odit explicabo ipsum asperiores facere temporibus! Eveniet inventore aliquid quod culpa, ipsam unde harum, aspernatur recusandae similique, sint eos repellendus accusantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam deleniti aliquid inventore reprehenderit asperiores nemo eveniet, dolor fugiat molestias consequuntur eaque mollitia reiciendis magnam. Assumenda mollitia qui nesciunt aliquam nobis?</p>
                     </div>
                     <div class="imagenes">
-                        <img src="imatges/shawarma.jpg" alt="Shawarma">
-                        <img src="imatges/kebab.jpg" alt="Kebab">
+                        <img src="imatgesnoves/imagen5.webp" alt="Shawarma">
+                        <img src="imatgesnoves/imagen7.webp" alt="Kebab">
                     </div>
                 </div>
             </div>
@@ -75,28 +84,28 @@
             <h1>Galeria d'imatges</h1>
             <div class="fotos">
                 <div class="imagen2">
-                    <img src="imatges/doner.jpg" alt="">
+                    <img src="imatges/doner.jpg" alt="doner">
                 </div>
                 <div class="imagen3">
-                    <img src="imatges/doner.jpg" alt="">
+                    <img src="imatges/doner.jpg" alt="doner">
                 </div>
                 <div class="imagen4">
-                    <img src="imatges/doner.jpg" alt="">
+                    <img src="imatges/doner.jpg" alt="doner">
                 </div>
                 <div class="imagen5">
-                    <img src="imatges/doner.jpg" alt="">
+                    <img src="imatges/doner.jpg" alt="doner">
                 </div>
                 <div class="imagen6">
-                    <img src="imatges/doner.jpg" alt="">
+                    <img src="imatges/doner.jpg" alt="doner">
                 </div>
                 <div class="imagen7">
-                    <img src="imatges/doner.jpg" alt="">
+                    <img src="imatges/doner.jpg" alt="doner">
                 </div>
                 <div class="imagen8">
-                    <img src="imatges/doner.jpg" alt="">
+                    <img src="imatges/doner.jpg" alt="doner">
                 </div>
                 <div class="imagen9">
-                    <img src="imatges/doner.jpg" alt="">
+                    <img src="imatges/doner.jpg" alt="doner">
                 </div>
             </div>
         </section>
