--- a/ACTIVITAT 3 - M09 - HTML  CSS/index.html
+++ b/ACTIVITAT 3 - M09 - HTML  CSS/index.html
@@ -119,6 +119,18 @@
             </div>
         </section>
 
+        <section id="video">
+            <h2>Videos del restaurant</h2>
+            <div class="video-container">
+                <video controls muted autoplay loop>
+                    <source src="/videos/videoM09.mp4" type="video/mp4">
+                    <source src="videos/videoM9.webm" type="video/webm">
+                    <source src="videos/videoM9.ogg" type="video/ogg">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+        </section>
+
         
     </main>
 
